objects/HealthCloudGA__TimelineViewConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Configuration_Target__c</fullName>
        <inlineHelpText>Select the timelines where you want users to see these fields.</inlineHelpText>
        <label>Configuration Target</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Cloud Console App</fullName>
                </value>
                <value>
                    <fullName>Timeline For Health Cloud Empower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DetailField__c</fullName>
        <label>Detail Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FilterCriterion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Criterion</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Record Type does not match Timeline type</errorMessage>
            <filterItems>
                <field>HealthCloudGA__FilterCriterion__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Timeline</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HealthCloudGA__FilterCriterion__c</referenceTo>
        <relationshipLabel>Timeline View Configurations</relationshipLabel>
        <relationshipName>Timeline_View_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FriendlyName__c</fullName>
        <label>Friendly Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GraphicalIcon__c</fullName>
        <label>Graphical Icon</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HoverFieldName__c</fullName>
        <inlineHelpText>Enter up to 7 comma-separated field names related to this object. Field details are displayed when users hover over an object in the timeline.</inlineHelpText>
        <label>Hover Field Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LanguageCode__c</fullName>
        <formula>CASE(HealthCloudGA__Language__c,
&quot;English (United States)&quot;, &quot;en_US&quot;,
&quot;English (United Kingdom)&quot;,&quot;en_GB&quot;,
&quot;Deutsch&quot;,&quot;de&quot;,
&quot;German&quot;,&quot;de&quot;,
&quot;Español&quot;,&quot;es&quot;,
&quot;Spanish&quot;,&quot;es&quot;,
&quot;Français&quot;, &quot;fr&quot;,
&quot;French&quot;, &quot;fr&quot;,
&quot;Português (Brasil)&quot;,&quot;pt_BR&quot;,
&quot;Portuguese (Brazil)&quot;,&quot;pt_BR&quot;,
&quot;Nederlands&quot;,&quot;nl_NL&quot;,
&quot;Dutch&quot;,&quot;nl_NL&quot;,
&quot;Español (México)&quot;,&quot;es_MX&quot;,
&quot;Spanish (Mexico)&quot;,&quot;es_MX&quot;,
&quot;Chinese (Simplified)&quot;, &quot;zh_CN&quot;,
&quot;Chinese (Traditional)&quot;, &quot;zh_TW&quot;,
&quot;Korean&quot;, &quot;ko&quot;,
&quot;Japanese&quot;, &quot;ja&quot;,
&quot;Danish&quot;, &quot;da&quot;,
&quot;Russian&quot;, &quot;ru&quot;,
&quot;Italian&quot;, &quot;it&quot;,
&quot;Finnish&quot;, &quot;fi&quot;,
&quot;en_US&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English (United Kingdom)</fullName>
                </value>
                <value>
                    <fullName>English (United States)</fullName>
                    <default>true</default>
                    <label>English (United States)</label>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexico)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ObjectCategory__c</fullName>
        <label>Object Category</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PatientAccountLookup__c</fullName>
        <defaultValue>&apos;Account__c&apos;</defaultValue>
        <label>Patient Account Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PositionField__c</fullName>
        <label>Position Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ShowOnLoad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Timeline View Configuration</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <columns>NAME</columns>
        <columns>HealthCloudGA__ObjectCategory__c</columns>
        <columns>HealthCloudGA__FriendlyName__c</columns>
        <columns>HealthCloudGA__ObjectName__c</columns>
        <columns>HealthCloudGA__PositionField__c</columns>
        <columns>HealthCloudGA__DetailField__c</columns>
        <columns>HealthCloudGA__GraphicalIcon__c</columns>
        <columns>HealthCloudGA__Language__c</columns>
        <columns>HealthCloudGA__Active__c</columns>
        <columns>HealthCloudGA__LanguageCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Timeline View Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timeline View Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>